--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.8.3",
+    "chillout": "file:..",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.13",
     "zustand": "^5.0.3"
